crates/elevator-tui/tests/snapshots/render_snapshot__distance_mode_after_60_ticks.snap
---
source: crates/elevator-tui/tests/render_snapshot.rs
expression: frame
---
 elevator-tui · tick 60 · ▶ 1.00× · distance · overview                                             
╭┤ shaft · 1 cars · distance ╮╭┤ dispatch · per-car state and load ├───────────────────────────────╮
│  Top         10.0      │ · ││Default      strategy=Scan  cars=1  waiting=0                       │
│               9.6      │ · ││  car 1    movg →Top       [█░░░░░░░░░]   75/800  q=1               │
│               9.2      │ · ││                                                                    │
│               8.8      │ · ││                                                                    │
│               8.4      │ · │╰────────────────────────────────────────────────────────────────────╯
│               8.0      │ · │╭┤ events · filter [all] ├───────────────────────────────────────────╮
│               7.6      │ · ││                                                                    │
│               7.2      │ · ││                                                                    │
│               6.8      │ · ││                                                                    │
│               6.4      │ · │╰────────────────────────────────────────────────────────────────────╯
│               6.0      │ · │╭┤ traffic · arrivals/sec ├──────────────────────────────────────────╮
│               5.6      │ · ││   0/s now   avg  0.0/s   total 1                                   │
│               5.2      │ · ││                                                                    │
│               4.8      │ · │╰────────────────────────────────────────────────────────────────────╯
│               4.4      │ · │╭┤ metrics · aggregate health ├──────────────────────────────────────╮
│               4.0      │ · ││    ▟▀▙ █▀▀      ▟█  ▟                                              │
│               3.6      │ · ││▜▞▜▖▜▄█ ▀▀▙     ▟▘█ ▝█▀                                             │
│               3.2      │ · ││▐▙▟▘ ▗▛ ▄ █     ▀▀█▘ █▗                                             │
│               2.8      │ · ││▟▙  ▝▀  ▝▀▘      ▝▀▘ ▝▘                                             │
│               2.4      │ · ││spawned 1   delivered 0   abandoned 0 (0.0%)                        │
│               2.0      │ · ││wait avg 4.0t   p95 4t   max 4t                                     │
│               1.6      │ · ││ride avg 0.0t   throughput 0/3600t   util 100%                      │
│               1.2      │ · ││p95 wait (ticks)                                                    │
│               0.8      │ · ││                                                                    │
│               0.4      │ * ││total occupancy                                                     │
│  Ground       0.0      │ ▲ ││                                                                    │
╰────────────────────────────╯╰────────────────────────────────────────────────────────────────────╯
 RUNNING  shaft  │  Spc pause · [/] car · m mode · Tab pane · ? help
