crates/elevator-tui/tests/snapshots/render_snapshot__help_overlay.snap
---
source: crates/elevator-tui/tests/render_snapshot.rs
expression: frame
---
 elevator-tui ╭┤ help · press ? or Esc to close ├────────────────────────────────────╮              
╭┤ shaft · 1 c│                                                                      │─────────────╮
│  Top        │  Playback                                                            │             │
│  Ground     │    space   pause / resume                                            │             │
│             │    . / ,   step one tick / ten ticks                                 │             │
│             │    + / -   halve or double tick rate (0.0625× – 64×)                 │             │
│             │                                                                      │─────────────╯
│             │  Navigation                                                          │─────────────╮
│             │    Tab     focus next pane (Shift+Tab for previous)                  │             │
│             │    [ / ]   focus previous / next car                                 │             │
│             │    f       follow focused car (event filter)                         │             │
│             │    Enter   toggle right panel: overview ↔ drill-down                 │             │
│             │    Esc     close drill-down or this overlay                          │             │
│             │    m       toggle shaft layout: index ↔ distance                     │             │
│             │                                                                      │             │
│             │  Command palette                                                     │             │
│             │    :       open palette · verbs:                                     │             │
│             │            `:shaft` `:dispatch` `:events` `:metrics` `:traffic`      │             │
│             │            `:drill` `:close` `:follow` `:help` `:quit`               │             │
│             │                                                                      │             │
│             │  Events pane (when focused)                                          │             │
│             │    j / k   scroll one event older / newer                            │─────────────╯
│             │    C-f / C-bhalf-page scroll                                         │─────────────╮
│             │    g g / G jump to newest / oldest event                             │             │
│             │    /       filter events (Enter commit, Esc cancel)                  │             │
│             │                                                                      │─────────────╯
│             │  Filters & Snapshots                                                 │─────────────╮
│             │    1..7    toggle event categories (1 Elev, 2 Rdr, 3 Dsp,            │             │
│             │            4 Top, 5 Rep, 6 Dir, 7 Obs)                               │             │
│             │    s / l   save / restore in-memory snapshot                         │             │
│             │                                                                      │             │
│             │  Glyphs                                                              │             │
│             │    ▲ ▼     going up / going down                                     │             │
│             │    ■       stopped                                                   │             │
│             │    L       loading riders                                            │             │
│             │    O / C   doors opening / closing                                   │             │
│             │    ↑↓      active hall call (up / down)                              │             │
│             │    (n)     n riders waiting at this stop                             │             │
╰─────────────│                                                                      │─────────────╯
 RUNNING  shaf╰──────────────────────────────────────────────────────────────────────╯
